# simplefind

./: Cargo.toml  README.md
src/: main.rs  user.dict  userdic.rs
